[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TopBar" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0

[node name="StatsRow" type="HBoxContainer" parent="TopBar"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="TopBar/StatsRow"]
layout_mode = 2
text = "Score: 0"

[node name="HealthLabel" type="Label" parent="TopBar/StatsRow"]
layout_mode = 2
text = "HP: 100 / 100"

[node name="OverlayCenter" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameOverLabel" type="Label" parent="OverlayCenter"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
visible = false
text = "GAME OVER"
